public/stylesheets/codecademy/ArticleShift.css
body {
  background-image: url('http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/reader/bg.png');
  -webkit-background-size: cover;
     -moz-background-size: cover;
       -o-background-size: cover;
          background-size: cover;
}

.panel-articleShift{
  margin-top:100px;  
}

.panel-articleShift .panel+.panel{
  margin:0px;
}

.panel-articleShift .panel{
  border-radius:0px;
}

.panel-default>.panel-heading, .panel-body{
    background-color:rgba(206,220,206,.9);
}

.active{
  background-color:rgba(143,168,143,.9);
}

